# expense-settlement

./: README.md  docker-compose.yml
ai_journal/: ai_journal.md  prompt.txt
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backend.Dockerfile  entrypoint.sh  gunicorn_conf.py  manage.py  nginx.conf  pyproject.toml  pytest.ini
backend/backend/: settings.py  urls.py
backend/core/: models.py  serializers.py  urls.py  views.py
backend/tests/: test_api.py  test_models.py
frontend/: .gitignore  Dockerfile  README.md  frontend.Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ExpenseForm.tsx
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx
frontend/src/types/: index.ts
infra/: README.md
infra/k8s/base/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  nginx-deployment.yaml  postgres-statefulset.yaml  secret.yaml
infra/k8s/monitoring/: alertmanager.yaml  grafana.yaml  prometheus.yaml
infra/terraform/: backend.tf  main.tf  variables.tf
shared/: .gitignore  package-lock.json  package.json  tsconfig.json
shared/src/: auth.ts  client.ts  expenses.ts  groups.ts  types.ts
